tests/parser-test-files/bad-files/parse-body.1.error
error: Malformed function
  --> test:4:17
   |
 4 |  (define x (progn))
   |                  ^ expected body
